--- a/runblueprint/plans/templates/plans/plan_form.html
+++ b/runblueprint/plans/templates/plans/plan_form.html
@@ -1,5 +1,18 @@
-<form action="/plans/" method="post">
+{% extends "base.html" %}
+
+{% block content %}
+<form action="/plans/" method="POST">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
+    {% for field in form %}
+        <div class="form-group">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {{ field }}
+            {% if field.help_text %}
+            <p class="help-block">{{ field.help_text|safe }}</p>
+            {% endif %}
+        </div>
+    {% endfor %}
+    <input class="btn btn-primary btn-large" type="submit" value="Submit"/>
 </form>
+{% endblock %}
