--- a/runblueprint/plans/templates/base.html
+++ b/runblueprint/plans/templates/base.html
@@ -13,7 +13,7 @@
     <!-- Custom styles for this template -->
     {% load staticfiles %}
     <link href="{% static 'style.css' %}" rel="stylesheet">
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
   </head>
   <body>
       {% include "nav.html" %}
