--- a/runblueprint/plans/templates/plans/plan.html
+++ b/runblueprint/plans/templates/plans/plan.html
@@ -1,1 +1,9 @@
-{{ plan }}
+{% extends "base.html" %}
+
+{% block content %}
+<div class="container">
+    <div class="starter-template">
+        {{ plan }}
+    </div>
+</div>
+{% endblock %}
