--- a/runblueprint/plans/templates/nav.html
+++ b/runblueprint/plans/templates/nav.html
@@ -11,10 +11,10 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="plans">Plans</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li class="active"><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="{% url 'plans' %}">Plans</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'contact' %}">Contact</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
