Extend base for about and contact pages

--- a/runblueprint/plans/templates/plans/contact.html
+++ b/runblueprint/plans/templates/plans/contact.html
@@ -1,3 +1,13 @@
-<h1>Contact Us</h1>
+{% extends "base.html" %}
 
-<p>Email: info@runblueprint.com</p>
+{% block content %}
+<div class="container">
+    <div class="starter-template homepage">
+
+      <h1>Contact Us</h1>
+
+      <p>Email: info@runblueprint.com</p>
+
+    </div>
+</div>
+{% endblock %}
