--- a/runblueprint/plans/templates/plans/about.html
+++ b/runblueprint/plans/templates/plans/about.html
@@ -1,3 +1,13 @@
-<h1>Run Blueprint</h1>
+{% extends "base.html" %}
 
-<p>A customized training plan generator.</p>
+{% block content %}
+<div class="container">
+    <div class="starter-template homepage">
+
+      <h1>Run Blueprint</h1>
+
+      <p>A customized training plan generator.</p>
+
+    </div>
+</div>
+{% endblock %}
