Attempt to link to media files
Need URL added I think.

--- a/runblueprint/plans/templates/plans/download.html
+++ b/runblueprint/plans/templates/plans/download.html
@@ -2,6 +2,12 @@
 
 <p>Here is your plan ID {{ plan_id }}</p>
 
+<ul>
+  <li><a href="{{MEDIA_URL}}/{{ plan_id }}.txt">TEXT</a></li>
+  <li><a href="{{MEDIA_URL}}/{{ plan_id }}.pdf">PDF</a></li>
+  <li><a href="{{MEDIA_URL}}/{{ plan_id }}.html">HTML</a></li>
+</ul>
+
 <p>Enjoy!</p>
 
 <p><a href="{% url 'plans' %}">Design another plan</a></p>
