Extend base template for style

--- a/runblueprint/plans/templates/plans/download.html
+++ b/runblueprint/plans/templates/plans/download.html
@@ -1,13 +1,23 @@
-<h1>Download your training plan!</h1>
+{% extends "base.html" %}
 
-<p>Here is your plan ID {{ plan_id }}</p>
+{% block content %}
+<div class="container">
+    <div class="starter-template">
 
-<ul>
-  <li><a href="{{ MEDIA_URL }}{{ plan_id }}.txt">TEXT</a></li>
-  <li><a href="{{ MEDIA_URL }}{{ plan_id }}.pdf">PDF</a></li>
-  <li><a href="{{ MEDIA_URL }}{{ plan_id }}.html">HTML</a></li>
-</ul>
+      <h1>Download your training plan!</h1>
 
-<p>Enjoy!</p>
+      <p>Here is your plan ID {{ plan_id }}</p>
 
-<p><a href="{% url 'plans' %}">Design another plan</a></p>
+      <ul>
+        <li><a href="{{ MEDIA_URL }}{{ plan_id }}.txt">TEXT</a></li>
+        <li><a href="{{ MEDIA_URL }}{{ plan_id }}.pdf">PDF</a></li>
+        <li><a href="{{ MEDIA_URL }}{{ plan_id }}.html">HTML</a></li>
+      </ul>
+
+      <p>Enjoy!</p>
+
+      <p><a href="{% url 'plans' %}">Design another plan</a></p>
+
+    </div>
+</div>
+{% endblock %}
