Update login template

--- a/runblueprint/plans/templates/registration/login.html
+++ b/runblueprint/plans/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
+<div class="starter-template">
 
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
@@ -35,4 +37,6 @@
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
+</div>
+</div>
 {% endblock %}
