--- a/runblueprint/plans/templates/nav.html
+++ b/runblueprint/plans/templates/nav.html
@@ -16,6 +16,10 @@
         <li><a href="{% url 'about' %}">About</a></li>
         <li><a href="{% url 'contact' %}">Contact</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="{% url 'register' %}">Sign Up</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+      </ul>
     </div><!--/.nav-collapse -->
   </div>
 </nav>
