--- a/runblueprint/plans/templates/nav.html
+++ b/runblueprint/plans/templates/nav.html
@@ -17,8 +17,13 @@
         <li><a href="{% url 'contact' %}">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        {% if not user %}
         <li><a href="{% url 'register' %}">Sign Up</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
+        {% else %}
+        <li><a href="{% url 'account' %}">{{ user }}</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% endif %}
       </ul>
     </div><!--/.nav-collapse -->
   </div>
