--- a/runblueprint/plans/templates/plans/download.html
+++ b/runblueprint/plans/templates/plans/download.html
@@ -9,8 +9,9 @@
       <p>Here is your plan ID {{ plan_id }}</p>
 
       <ul>
-        <li><a href="{{ MEDIA_URL }}{{ plan_id }}.txt">TEXT</a></li>
-        <li><a href="{{ MEDIA_URL }}{{ plan_id }}.html">HTML</a></li>
+      {% for plan in plans %}
+          <li><a href="{{ plan.url }}">{{ plan.type }}</a></li>
+      {% endfor %}
       </ul>
 
       <p>Enjoy!</p>
