--- a/runblueprint/plans/templates/nav.html
+++ b/runblueprint/plans/templates/nav.html
@@ -17,7 +17,7 @@
         <li><a href="{% url 'contact' %}">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        {% if not user %}
+        {% if not user.is_authenticated %}
         <li><a href="{% url 'register' %}">Sign Up</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
         {% else %}
