Add quotes to plan name in HTML

--- a/runblueprint/plans/templates/plans/download.html
+++ b/runblueprint/plans/templates/plans/download.html
@@ -7,7 +7,7 @@
       <h1>Download your training plan!</h1>
 
       {% if plan_name %}
-      <h3>{{ plan_name }}</h3>
+      <h3>"{{ plan_name }}"</h3>
       {% endif %}
 
       <p>Choose from the following formats:</p>
