--- a/runblueprint/plans/templates/plans/render_plan.html
+++ b/runblueprint/plans/templates/plans/render_plan.html
@@ -1,13 +1,36 @@
-<html>
-  <h1>Plan number {{ plan.id }}</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>{% block title %}Runblueprint{% endblock %}</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-  {% for week in plan.weeks %}
-  <h3>Week {{ week.number }} - {{ week.title }}</h3>
-    <ul>
-    {% for day in week.days %}
-      <li>Day {{ day.number }}: {{ day.distance|floatformat:2 }}</li>
+    <!-- Custom styles for this template -->
+    {% load staticfiles %}
+    <link href="{% static 'style.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
+  </head>
+  <body>
+
+    <h1>Plan number {{ plan.id }}</h1>
+    {% for week in plan.weeks %}
+    <h3>Week {{ week.number }} - {{ week.title }}</h3>
+      <ul>
+      {% for day in week.days %}
+        <li>Day {{ day.number }}: {{ day.distance|floatformat:2 }}</li>
+      {% endfor %}
+      </ul>
     {% endfor %}
-    </ul>
-  {% endfor %}
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="{% static 'js/submit_form_on_enter.js' %}"></script>
+  </body>
 </html>
