Add plan title to html renderer

--- a/runblueprint/plans/templates/plans/render_plan.html
+++ b/runblueprint/plans/templates/plans/render_plan.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container plan">
-      <h1>Plan number {{ plan.id }}</h1>
+      <h2>{{ plan }}</h2>
 
       {% for week in plan.weeks %}
       <table class="table table-striped week">
