--- a/runblueprint/plans/templates/plans/render_plan.html
+++ b/runblueprint/plans/templates/plans/render_plan.html
@@ -20,7 +20,7 @@
       <h2>{{ plan|capfirst }}</h2>
 
       {% for week in plan.weeks %}
-      <table class="table table-striped table-condensed table-bordered">
+      <table class="table {% cycle 'table-light' 'table-dark' %}">
         <thead>
           <tr>
             <th>Date</th>
@@ -30,7 +30,7 @@
           </tr>
         </thead>
         <tbody>
-          <h3>Week {{ week.number }}: {{ week.title }} - {{ week.distance }}km</h3>
+          <h4>{{ week.title }} - {{ week.distance }}km</h4>
           {% for day in week.days %}
             <tr>
               <th scope="row">{{ day.date|date:"l, d M" }}</th>
