--- a/runblueprint/plans/templates/plans/render_plan.html
+++ b/runblueprint/plans/templates/plans/render_plan.html
@@ -24,10 +24,10 @@
         <caption>{{ week.title }} - {{ week.distance }}km</caption>
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Distance</th>
-            <th>Type</th>
-            <th>Workout</th>
+            <th class="table-column-date">Date</th>
+            <th class="table-column-distance">Distance</th>
+            <th class="table-column-type">Type</th>
+            <th class="table-column-workout">Workout</th>
           </tr>
         </thead>
         <tbody>
