--- a/runblueprint/plans/templates/registration/login.html
+++ b/runblueprint/plans/templates/registration/login.html
@@ -17,7 +17,7 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form method="post" action="{% url 'login' %}">
 {% csrf_token %}
 <table>
 <tr>
