Update contact page (test)

--- a/runblueprint/plans/templates/plans/contact.html
+++ b/runblueprint/plans/templates/plans/contact.html
@@ -6,7 +6,7 @@
 
       <h1>Contact Us</h1>
 
-      <p>Email: info@runblueprint.com</p>
+      <p>email: info runblueprint.com</p>
 
     </div>
 </div>
